syntax = "proto3";

option java_multiple_files = true;
option java_package = "kvprog";

package kvprog;

service B {
  rpc B1 (B1Request) returns (B1Reply) {}
  rpc B2 (B2Request) returns (B2Reply) {}
}

message B1Request {}

message B1Reply {}

message B2Request {
  bool call_c = 1;
}

message B2Reply {}
